--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "clsx": "latest",
     "next": "latest",
     "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "dev": "next",
