--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "latest",
+    "@xstate/react": "^0.8.1",
     "clsx": "latest",
     "next": "latest",
     "prop-types": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "xstate": "^4.13.0",
+    "react-draggable": "^4.4.3"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next dev -p 8080",
     "build": "next build && next export",
-    "start": "next start",
+    "start": "next build && next start",
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   }
 }
